// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Text renders RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        dir="rtl"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        dir="rtl"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          dir="rtl"
          placeholder=" "
          readOnly={true}
          type="text"
          value="Read only text"
        />
        <label
          className="sc-imdKTc dWOyyj"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        disabled={true}
        placeholder=" "
        type="text"
        value="Text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        disabled={true}
        placeholder=" "
        type="text"
        value="Text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          disabled={true}
          placeholder=" "
          type="text"
          value="Text"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ bBBlgz"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ ccmqJI"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ esZogK"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder=" "
          readOnly={true}
          type="text"
          value="Read only text"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder="medium"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder="large"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ dxsTVJ"
          placeholder="xlarge"
          type="text"
        />
        <label
          className="sc-imdKTc hgJXpw"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ kvrIuy"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ eCQCpR"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE ktmlgL"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
